--- a/gb/20/2/28/n11902212.md
+++ b/gb/20/2/28/n11902212.md
@@ -1,10 +1,9 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kjrkiz2594/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kjrkiz2594/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kjrkiz2594/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华埠火灾楼清拆 陈家龄请愿留外墙</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/5ca50cae44204c6bd28b79120f5d04da-600x400.jpg" />
-<h6>陈家龄认为，这栋橙色砖的外墙、有着气势宏伟角楼的旧楼已成了附近珍贵的文化地标。 (大纪元图片库)
-</h6>
+
+<h6></h6>
 <hr>
 <p>【大纪元2020年02月28日讯】（大纪元记者蔡溶美国纽约报导）华埠茂比利街70号大楼1月24日发生五级大火至今一个多月，政府经过一系列准备后，昨天开始有序的拆除工程。对于大楼的重建，不同人有不同想法，中华总商会早前致信市议长，建议原址新建20层高楼，而华埠居民陈家龄昨天在网上发出给市议长的请愿信，呼吁尽量保留大楼外貌。</p>
 <p>陈家龄说，这座令人印象深刻的建筑是由CBJ Snyder于1893年设计和建造的，有127年历史。</p>
@@ -19,47 +18,49 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/28/n11902212.htm">华埠火灾楼清拆 陈家龄请愿留外墙</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11896572.htm">华埠火灾危楼明开拆 四个月拆完</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11867973.htm">华埠火灾楼要拆  商会建议盖高楼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827101.htm">华埠茂比利街再发生火灾 无人伤亡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11820954.htm">曼哈顿唐人街发生五级大火 华博馆受损严重</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819752.htm">纽约市长现身火场 关注华埠灾后安置（影音）</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884463.htm">北京多家医院爆发新冠肺炎群聚感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879930.htm">专家：中共已是烂摊子 全球将迎来新的中国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884649.htm">中共多家监狱爆发大规模新冠肺炎疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884866.htm">武汉民间志愿者：新冠肺炎重症死亡率达50%</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883588.htm">让春意进入家中 春季餐桌装饰要点</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882591.htm">白色“充气城堡”中的另类婚礼 用跳的结婚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884842.htm">美国密西根湖的冰火山喷发 蔚为奇观</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882704.htm">超美多肉植物“山地玫瑰”花语：永恒的爱和美</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882847.htm">鸟也住大楼？南非大鸟巢有100房间500只鸟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11866471.htm">【三国英雄13】官渡之战曹操获胜的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/1/25/n11819752.md#1">纽约市长现身火场 关注华埠灾后安置（影音）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/1/25/n11820954.md#1">曼哈顿唐人街发生五级大火 华博馆受损严重</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/1/28/n11827101.md#1">华埠茂比利街再发生火灾 无人伤亡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/14/n11867973.md#1">华埠火灾楼要拆  商会建议盖高楼</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/26/n11896572.md#1">华埠火灾危楼明开拆 四个月拆完</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741331.md#1">纽约市出现疑似猴痘病例</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741332.md#1">水牛城枪手遭大陪审团起诉</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741334.md#1">纽约上诉法庭恢复“隔膜法” 警察工会不服</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741336.md#1">纽约市议会新法：大楼房东必须安装自动关闭门</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741338.md#1">美人口普查局：纽约州人数不满两千万</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjrkiz2594/djy/blob/master/gb/20/2/28/n11902212.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kjrkiz2594/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjrkiz2594/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/25/n10427499.md#1" target="_blank">严家伟：文革中的监狱往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/28/n11902212.htm">华埠火灾楼清拆 陈家龄请愿留外墙</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/2/28/n11902212.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
